Add style changes to all pages.

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
  <header>
-    <div id="container">
+    <div class="container">
         <div id="logo-container" role="img" aria-label="Lamad logo image" title="Lamad logo image">
             <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="74"></a>
             </div>
@@ -44,7 +44,7 @@
  <section id="about">
     <div class="content">
         <h2>How we began</h2>
-        <div id="how-we-started">
+        <div class="how-we-started">
            <p>
             The idea of having a Lamad tailors first appeared in the mind of a young lady who had for a long time searched in vain for a dress which would perfectly fit her. She decided therefore to start offering tailor made dresses for people for those in the same situation, ill served by the lady’s outfitters of the time. The enthusiastic response of her customers inspired the young entrepreneur to widen the services she offered to include tailor made suits, which until then many Irish,Ukrainian men and women had only been able to dream of. The next step was to seek for help hand from compatriots with similar skills .
 
@@ -58,8 +58,8 @@ We have now been operating as leading tailors in Cahersiveen and its environs fo
         </div>
     </div>
  </section>
- <section id="newsletter">
-    <div id="news">
+ <section class="newsletter">
+    <div class="news">
         <h3>NewsLetter</h3>
         <form action="https://formdump.codeinstitute.net" method="post">
             <input type="email" name="email" id="email" placeholder="Enter your email here" required><br>
