--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div id="container">
+        <div class="container">
             <!-- logo image got from app.logo.com -->
             <div id="logo-container" role="img" aria-label="Lamad logo image" title="Lamad logo image">
                 <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="74"></a>
