Add image files to readme.

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,78 +11,96 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Lamad Tailors | About </title>
 </head>
-<body>
- <header>
-    <div class="container">
-        <div id="logo-container" role="img" aria-label="Lamad logo image" title="Lamad logo image">
-            <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="74"></a>
-            </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="about.html" class="active">About</a>
-                </li>
-                <li>
-                    <a href="services.html">Services</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
- </header>
- <a href="#" id="off" ></a>
- <section id="main-image">
-    <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine">
-        <img src="assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
-    </div>
-    <h1 class="info">About us</h1>
- </section>
- <section id="about">
-    <div class="content">
-        <h2>How we began</h2>
-        <div class="how-we-started">
-           <p>
-            The idea of having a Lamad tailors first appeared in the mind of a young lady who had for a long time searched in vain for a dress which would perfectly fit her. She decided therefore to start offering tailor made dresses for people for those in the same situation, ill served by the lady’s outfitters of the time. The enthusiastic response of her customers inspired the young entrepreneur to widen the services she offered to include tailor made suits, which until then many Irish,Ukrainian men and women had only been able to dream of. The next step was to seek for help hand from compatriots with similar skills .
 
-We have now been operating as leading tailors in Cahersiveen and its environs for 7 months and we owe our success to our belief in honesty and hard work.
-           </p> 
-             
+<body>
+    <header>
+        <div class="container">
+            <div id="logo-container" role="img" aria-label="Lamad logo image" title="Lamad logo image">
+                <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300"
+                        height="74"></a>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html" class="active">About</a>
+                    </li>
+                    <li>
+                        <a href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <div id="group" role="img" aria-label="group of tailors cheering" title="group of tailors cheering">
-         <!-- image goes here -->
-         <img src="assets/images/group.webp" alt="group of tailors cheering" width="400" height="268">
+    </header>
+    <a href="#" id="off"></a>
+    <section id="main-image">
+        <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine">
+            <img src="assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
         </div>
-    </div>
- </section>
- <section class="newsletter">
-    <div class="news">
-        <h3>NewsLetter</h3>
-        <form action="https://formdump.codeinstitute.net" method="post">
-            <input type="email" name="email" id="email" placeholder="Enter your email here" required><br>
-            <button type="submit">subscribe</button>
-        </form>
-    </div>
- </section>
+        <h1 class="info">About us</h1>
+    </section>
+    <section id="about">
+        <div class="content">
+            <h2>How we began</h2>
+            <div class="how-we-started">
+                <p>
+                    The idea of having a Lamad tailors first appeared in the mind of a young lady who had for a long
+                    time searched in vain for a dress which would perfectly fit her. She decided therefore to start
+                    offering tailor made dresses for people for those in the same situation, ill served by the lady’s
+                    outfitters of the time. The enthusiastic response of her customers inspired the young entrepreneur
+                    to widen the services she offered to include tailor made suits, which until then many
+                    Irish,Ukrainian men and women had only been able to dream of. The next step was to seek for help
+                    hand from compatriots with similar skills .
+
+                    We have now been operating as leading tailors in Cahersiveen and its environs for 7 months and we
+                    owe our success to our belief in honesty and hard work.
+                </p>
+
+            </div>
+            <div id="group" role="img" aria-label="group of tailors cheering" title="group of tailors cheering">
+                <!-- image goes here -->
+                <img src="assets/images/group.webp" alt="group of tailors cheering" width="400" height="268">
+            </div>
+        </div>
+    </section>
+    <section class="newsletter">
+        <div class="news">
+            <h3>NewsLetter</h3>
+            <form action="https://formdump.codeinstitute.net" method="post">
+                <input type="email" name="email" id="email" placeholder="Enter your email here" required><br>
+                <button type="submit">subscribe</button>
+            </form>
+        </div>
+    </section>
     <footer>
         <div id="foot">
-        <ul class="social-links">
-            <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page(opens on a new tab)"><i class="fab fa-facebook-square"></i></a></li>
-            <li><a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page(opens on a new tab)"><i class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page(opens on a new tab)"><i class="fab fa-youtube"></i></a></li>
-            <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page(opens on a new tab)"><i class="fab fa-instagram"></i></a></li>
-        </ul>
-        <div id="copy">
-            <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
+            <ul class="social-links">
+                <li><a href="https://facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our facebook page(opens on a new tab)"><i
+                            class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our twitter page(opens on a new tab)"><i
+                            class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our youtube page(opens on a new tab)"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our instagram page(opens on a new tab)"><i class="fab fa-instagram"></i></a>
+                </li>
+            </ul>
+            <div id="copy">
+                <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
             </div>
-       </div>
+        </div>
     </footer>
-    <a href="#" id="to-top" aria-label="move to top of page"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
+    <a href="#" id="to-top" aria-label="move to top of page"><span class="move_to_top"><i
+                class="fas fa-caret-up"></i></span></a>
     <!-- fontawesome  -->
-    <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>   
+    <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
