--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lamad Tailors a tailoring shop located in cahersiveen County Kerry">
-    <meta name="keywords" content="lamad tailors,tailors,clothe alterations,wedding gowns,suits,children clothes, sports wear">
+    <meta name="keywords"
+        content="lamad tailors,tailors,clothe alterations,wedding gowns,suits,children clothes, sports wear">
     <link rel="shortcut icon" href="assets/images/lamad-website-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Lamad Tailors | Contact</title>
 </head>
+
 <body>
     <header>
         <div class="container">
             <!-- logo image got from app.logo.com -->
             <div id="logo-container" role="img" aria-label="Lamad logo image" title="Lamad logo image">
-                <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="74"></a>
+                <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300"
+                        height="74"></a>
             </div>
             <nav>
                 <ul>
@@ -35,7 +39,7 @@
             </nav>
         </div>
     </header>
-    <a href="#" id="off" ></a>
+    <a href="#" id="off"></a>
     <section id="main-image">
         <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine">
             <img src="assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
@@ -51,7 +55,7 @@
                 <br>
                 <label for="phone">Phone:</label>
                 <br>
-                <input type="tel" name="phone" id="phone"  class="text-input" required>
+                <input type="tel" name="phone" id="phone" class="text-input" required>
                 <br>
                 <label for="email">Email:</label>
                 <br>
@@ -64,7 +68,7 @@
                 <input type="submit" value="Send" class="btn">
             </form>
         </div>
-    
+
         <div id="contact">
             <h2>Contact us</h2>
             <p>Want to connect with Lamad Tailor? Please use the contact form, or contact us by phone.</p>
@@ -72,29 +76,40 @@
             <p><i class="fas fa-mobile-alt"></i> 087-785-0472</p>
             <p><i class="fas fa-home"></i> Skellig Accommodation Center,V23 H729</p>
         </div>
-       </section>
- 
-       <section id="map">
+    </section>
+
+    <section id="map">
         <div id="map-wrapper">
             <h2>Our Location</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2459.2640832509846!2d-10.228465123398758!3d51.947375571916716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484ff31ceb50d033%3A0xbf4459f40fc381a4!2sSkellig%20Accommodation%20Centre!5e0!3m2!1sen!2sie!4v1670701740436!5m2!1sen!2sie" title="Lamad tailors Cahersiveen" allowfullscreen ></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2459.2640832509846!2d-10.228465123398758!3d51.947375571916716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484ff31ceb50d033%3A0xbf4459f40fc381a4!2sSkellig%20Accommodation%20Centre!5e0!3m2!1sen!2sie!4v1670701740436!5m2!1sen!2sie"
+                title="Lamad tailors Cahersiveen" allowfullscreen></iframe>
         </div>
-       </section>
+    </section>
     <footer>
         <div id="foot">
-        <ul class="social-links">
-            <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page(opens on a new tab)"><i class="fab fa-facebook-square"></i></a></li>
-            <li><a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page(opens on a new tab)"><i class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page(opens on a new tab)"><i class="fab fa-youtube"></i></a></li>
-            <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page(opens on a new tab)"><i class="fab fa-instagram"></i></a></li>
-        </ul>
-        <div id="copy">
-            <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
+            <ul class="social-links">
+                <li><a href="https://facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our facebook page(opens on a new tab)"><i
+                            class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our twitter page(opens on a new tab)"><i
+                            class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our youtube page(opens on a new tab)"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our instagram page(opens on a new tab)"><i class="fab fa-instagram"></i></a>
+                </li>
+            </ul>
+            <div id="copy">
+                <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
             </div>
-    </div>
+        </div>
     </footer>
-    <a href="#" id="to-top" aria-label="move to top of page"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
-     <!-- fontawesome  -->
-     <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>   
+    <a href="#" id="to-top" aria-label="move to top of page"><span class="move_to_top"><i
+                class="fas fa-caret-up"></i></span></a>
+    <!-- fontawesome  -->
+    <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
