--- a/index.html
+++ b/index.html
@@ -13,35 +13,27 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div id="logo-container" role="img" aria-label="Lamad logo image" title="Lamad logo image">
-                <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300"
-                        height="74"></a>
+    <header id="main-header">
+        <nav>
+            <div id="logo" role="img" aria-label="Lamad logo image" title="Lamad logo image">
+                <img src="assets/images/lamad.webp" alt="lamad logo image" width="300"
+                height="74">   
             </div>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html" class="active">Home</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="services.html">Services</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <a href="#" id="off"></a>
-    <section id="main-image">
-        <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine">
-            <img src="assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
-        </div>
+            <ul>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="services.html">Services</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
         <div id="welcome">
             <h1>Welcome</h1>
             <div class="mytext">
@@ -52,7 +44,9 @@
             </div>
 
         </div>
-    </section>
+      
+    </header>
+    <a href="#" id="off"></a>
     <section id="works">
         <div class="content">
             <h2>The things we do</h2>
