Add correction to about and index page.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header id="main-header" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine">
+    <header id="main-header">
         <nav>
             <div id="logo" role="img" aria-label="Lamad logo image" title="Lamad logo image">
                 <img src="assets/images/lamad.webp" alt="lamad logo image" width="300"
