--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     loves perfection.</div>
                 <div class="customer">Kelly Hampstire</div>
             </div>
-            <div class="design placeholder id=" person3">
+            <div class="design placeholder" id="person3">
                 <div id="client3" class="client" role="img" aria-label="image of Kim Uthiek"
                     title="image of Kim Uthiek"></div>
                 <div>Wonderful staff and phenominal work! I just can't stop praising their excellence and craftsmanship.
